crates/diagnostics/src/snapshots/diagnostics__parse_lsp_snapshots__tests__parse_bad_tokens_second_statement_human_snapshot.snap
---
source: crates/diagnostics/src/parse_lsp_snapshots.rs
assertion_line: 137
expression: "snapshot_human(src, &bundle)"
---
[parse::syntax] Error: expected expression, found ')'
   ╭─[ test.ds:2:9 ]
   │
 2 │ let b = )'(;
   │         ┬  
   │         ╰── expected expression, found ')'
───╯
