crates/diagnostics/src/snapshots/diagnostics__parse_lsp_snapshots__tests__parse_bad_tokens_second_statement_lsp_snapshot.snap
---
source: crates/diagnostics/src/parse_lsp_snapshots.rs
expression: "snapshot_lsp_json(src, &bundle)"
---
[
  {
    "range": {
      "start": {
        "line": 1,
        "character": 8
      },
      "end": {
        "line": 1,
        "character": 9
      }
    },
    "message": "expected expression, found ')'",
    "severity": 1,
    "code": "parse::syntax"
  },
  {
    "range": {
      "start": {
        "line": 1,
        "character": 9
      },
      "end": {
        "line": 1,
        "character": 10
      }
    },
    "message": "expected expression, found an unrecognized token",
    "severity": 1,
    "code": "parse::syntax"
  },
  {
    "range": {
      "start": {
        "line": 1,
        "character": 11
      },
      "end": {
        "line": 1,
        "character": 12
      }
    },
    "message": "expected expression, found ';'",
    "severity": 1,
    "code": "parse::syntax"
  },
  {
    "range": {
      "start": {
        "line": 1,
        "character": 12
      },
      "end": {
        "line": 2,
        "character": 0
      }
    },
    "message": "expected ')'",
    "severity": 1,
    "code": "parse::syntax"
  }
]
