crates/diagnostics/src/snapshots/diagnostics__parse_lsp_snapshots__tests__parse_let_x_newline_let_y_human_snapshot.snap
---
source: crates/diagnostics/src/parse_lsp_snapshots.rs
expression: "snapshot_human(src, &bundle)"
---
[parse::syntax] Error: expected expression, found 'let'
   ╭─[ test.ds:2:1 ]
   │
 2 │ let y = 1
   │ ─┬─  
   │  ╰─── expected expression, found 'let'
───╯

