crates/diagnostics/src/snapshots/diagnostics__parse_lsp_snapshots__tests__synthetic_primary_on_second_line_human.snap
---
source: crates/diagnostics/src/parse_lsp_snapshots.rs
expression: "snapshot_human(src, &bundle)"
---
[test::synthetic] Error: unknown name `wobble`
   ╭─[ test.ds:2:9 ]
   │
 2 │ let b = wobble;
   │         ───┬──  
   │            ╰──── unknown name `wobble`
───╯

