crates/diagnostics/src/snapshots/diagnostics__parse_lsp_snapshots__tests__synthetic_primary_on_second_line_lsp.snap
---
source: crates/diagnostics/src/parse_lsp_snapshots.rs
expression: "snapshot_lsp_json(src, &bundle)"
---
[
  {
    "range": {
      "start": {
        "line": 1,
        "character": 8
      },
      "end": {
        "line": 1,
        "character": 14
      }
    },
    "message": "unknown name `wobble`",
    "severity": 1,
    "code": "test::synthetic"
  }
]
